Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
       <div class="inner">
         <h1>Resume</h1>
-        <h2></h2>
+        <h2>Email: y***@gmail.com</h2>
         <a href="https://github.com/wanderlust-wei/Resume" class="button"><small>View project on</small> GitHub</a>
       </div>
     </header>
