--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="inner clearfix">
         <section id="main-content">
           <h3>
-<a id="" class="anchor" href="#%E6%95%99%E8%82%B2%E8%83%8C%E6%99%AF" aria-hidden="true"><span class="octicon octicon-link"></span></a>教育背景</h3>
+<a id="Education" class="anchor" href="#%E6%95%99%E8%82%B2%E8%83%8C%E6%99%AF" aria-hidden="true"><span class="octicon octicon-link"></span></a>Education</h3>
 
 <p><strong>XXXXXXXX</strong></p>
 
